# TestGenericDeps

./: .gitignore  README.md
contracts/test01/: Cargo.toml  README.md  Readme.md
contracts/test01/src/: contract.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/test01/src/tests/: mod.rs  test_instantiate.rs  test_minting.rs  tests.rs  utils.rs
