[package]
name = "test01"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[dependencies]
cosmwasm-std = "1.5.0"
cosmwasm-storage = "1.5.0"
cosmwasm-schema = "1.5.0"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw2 = { version = "0.15.1" }
cw20 = { version = "0.15.1" }
cw-storage-plus = { version = "0.15.1" }
thiserror = "1.0.35"
classic-bindings = { version = "0.1.1" }

[dev-dependencies]
cw-multi-test =  { version = "0.16.0" }
cw20-base = { version = "0.15.1", features = ["library"] }
