[package]
name = "test01"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = "1.5.5"
cosmwasm-storage = "1.5.2"
cosmwasm-schema = "1.5.5"
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
cw2 = { version = "0.16.0" }
cw20 = { version = "0.16.0" }
cw-storage-plus = { version = "0.15.1" }
thiserror = "1.0.61"
classic-bindings = { version = "0.2.1" }

[dev-dependencies]
cw-multi-test = { version = "0.16.5" }
cw20-base = { version = "0.16.0", features = ["library"] }
